--- a/estilo/starbucks.css
+++ b/estilo/starbucks.css
@@ -91,18 +91,16 @@ width: 100vw;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 }
-.area1--content{
 
-}
 .area1--content .box{
-    width: 200px;
+    width: 188px;
     height: 30px;
     background-color: #117050;
     margin-left: 50px;
     margin-top: 75px;
 }
 .conteudo--area1{
-    width: 350px;
+    width: 490px;
     margin-left:50px;
 }
 .conteudo--area1 h1{
@@ -120,7 +118,24 @@ width: 100vw;
 .conteudo--area1 p{
     margin-top: 25px;
     line-height: 25px;
-    width: 400px;
+    width: 490px;
+    color: rgba(0, 0, 0, 0.741);
+    margin-bottom: 60px;
+}
+.btn{
+    margin-bottom: 80px;
+}
+.btn a{
+    text-decoration: none;
+    border: 2px solid #454545;
+    padding: 10px 30px;
+    color: #454545;
+    border-radius: 3px;
+}
+.btn a:hover{
+    background-color: #555;
+    color: white;
+    border: none;
 }
 .area1--img1{
     background-color: #ff0000;
@@ -134,4 +149,172 @@ width: 100vw;
     grid-row: 1 / 3;
     background: url('../imagens/f1.jpg') no-repeat center center;
     background-size: cover;
+}
+
+
+.area2{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.area2--content .box{
+    width: 188px;
+    height: 30px;
+    background-color: #117050;
+    margin-left: 50px;
+    margin-top: 75px;
+}
+.conteudo--area2{
+    width: 490px;
+    margin-left:50px;
+}
+.conteudo--area2 h1{
+    font-family: 'oswald', sans-serif;
+    font-size: 2.4em;
+    line-height: 45px;
+    margin-bottom: 25px;
+    margin-top: 15px;
+}
+
+.conteudo--area2 p{
+    margin-top: 25px;
+    line-height: 25px;
+    width: 490px;
+    color: rgba(0, 0, 0, 0.741);
+    margin-bottom: 60px;
+}
+.btn{
+    margin-bottom: 80px;
+}
+.btn a{
+    text-decoration: none;
+    border: 2px solid #454545;
+    padding: 10px 30px;
+    color: #454545;
+    border-radius: 3px;
+}
+.btn a:hover{
+    background-color: #555;
+    color: white;
+    border: none;
+}
+.area2--img1{
+    background-color: #ff0000;
+    height: 350px;
+    background: url('../imagens/f4.jpg') no-repeat center;
+    background-size: cover;
+}
+.area2--img2{
+
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+    background: url('../imagens/f3.jpg') no-repeat center center;
+    background-size: cover;
+}
+
+
+
+.area3{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.area3--content{
+    padding-top: 100px;
+}
+.conteudo--area3{
+    height: 635px;
+    background: url("../imagens/bg2.jpg") no-repeat left center;
+    background-size: cover;
+    
+}
+.conteudo--area3 h1{
+    margin-left: 50px;
+    font-family: 'oswald', sans-serif;
+    font-size: 2.4em;
+    line-height: 45px;
+    margin-bottom: 25px;
+    padding-top: 150px;
+}
+
+.conteudo--area3 p{
+    margin-left: 50px;
+    margin-top: 25px;
+    line-height: 25px;
+    width: 490px;
+    color: rgba(0, 0, 0, 0.741);
+    margin-bottom: 60px;
+
+}
+.btn{
+    margin-bottom: 80px;
+    margin-left: 50px;
+}
+.btn a{
+    text-decoration: none;
+    border: 2px solid #454545;
+    padding: 10px 30px;
+    color: #454545;
+    border-radius: 3px;
+}
+.btn a:hover{
+    background-color: #555;
+    color: white;
+    border: none;
+}
+.area3--img1{
+ 
+    height: 735px;
+    background: url('../imagens/f5.jpg') no-repeat center;
+    background-size: cover;
+}
+
+
+
+.area4{
+    display: grid;
+    grid-template-columns:1fr;
+}
+
+.area4--content .box{
+    width: 188px;
+    height: 30px;
+    background-color: #117050;
+    margin-left: 50px;
+    margin-top: 75px;
+}
+.conteudo--area4{
+    width: 100%;
+    max-width: 1140px;
+    margin-left:50px;
+}
+.conteudo--area4 h1{
+    font-family: 'oswald', sans-serif;
+    font-size: 2.4em;
+    line-height: 45px;
+    margin-bottom: 25px;
+    margin-top: 15px;
+}
+
+.conteudo--area4 p{
+    margin-top: 25px;
+    line-height: 25px;
+    width: 490px;
+    color: rgba(0, 0, 0, 0.741);
+    margin-bottom: 60px;
+}
+.btn{
+    margin-bottom: 80px;
+}
+.btn a{
+    text-decoration: none;
+    border: 2px solid #454545;
+    padding: 10px 30px;
+    color: #454545;
+    border-radius: 3px;
+}
+.btn a:hover{
+    background-color: #555;
+    color: white;
+    border: none;
 }
