--- a/estilo/starbucks.css
+++ b/estilo/starbucks.css
@@ -373,9 +373,16 @@ footer{
     }
 }
 @media (max-width:425px){
+    body{
+        overflow-x: hidden;
+    }
     .container{
         padding-left: 20px;
         padding-right: 30px;
+    }
+    .header-right form {
+        display: flex;
+        margin-left: 25px;
     }
     .header-right input{
         max-width: 190px;
@@ -383,10 +390,12 @@ footer{
     }
     .banner{
         padding-top: 40px;
+        height: 320px;
     }
     .banner .container h1{
-        font-size: 70px;
-        line-height: 70px;
+        font-size: 40px;
+        line-height: 40px;
+        margin-bottom: 15px;
     }
     .banner-images{
         display: flex;
@@ -394,9 +403,9 @@ footer{
         padding-left: 10px;
     }
     .banner-images img{
-        max-width: 100px;
-        height: 100px;
-        margin-right: 20px;
+        max-width: 80px;
+        height: 80px;
+        margin: 10px;
         border-radius: 50%;
         border: 3px solid #117050;
         cursor: pointer;
@@ -412,20 +421,21 @@ footer{
         margin-left: 20px;
         margin-top: 35px;
     }
-    .conteudo--area1{
-        max-width: 425px;
-    }
     .conteudo--area1 {
-        max-width: 345px;
+        max-width: 320px;
         margin-left: 20px;
         margin-right: 10px;
+    }
+    .conteudo--area1 h1{
+        font-size: 33px;
+        margin-right: 20px;
     }
     .btn{
         margin-left: 0px;
     }
     .area1--img1{
         height: 250px;
-        max-width: 385px;
+        width: 300px;
         width: 100vw
     }
 
@@ -439,11 +449,9 @@ footer{
         margin-left: 20px;
         margin-top: 35px;
     }
-    .conteudo--area2{
-        max-width: 425px;
-    }
+
     .conteudo--area2 {
-        max-width: 345px;
+        max-width: 320px;
         margin-left: 20px;
         margin-right: 10px;
     }
@@ -452,7 +460,7 @@ footer{
     }
     .area2--img1{
         height: 250px;
-        max-width: 385px;
+        width: 300px;
         width: 100vw
     }
 
@@ -480,6 +488,7 @@ footer{
     }
     .conteudo--area3{
         height: 430px;
+        max-width: 320px;
     }
     .area3--img1 {
         height: 350px;
@@ -502,6 +511,7 @@ footer{
     }
     .conteudo--area4{
         margin-left: 20px;
+        max-width: 320px;
     }
     .area4 .btn{
         margin: none;
