--- a/estilo/starbucks.css
+++ b/estilo/starbucks.css
@@ -472,6 +472,7 @@ footer{
     }
     .area3--content {
         padding-top: 30px;
+        padding-bottom: 80px;
     }
     .conteudo--area3 h1 {
         margin-left: 20px;
